<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <TableLayout android:id="@+id/TableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:collapseColumns="0"
            android:stretchColumns="1,2">

            <TableRow android:id="@+id/TableRow1"
                android:layout_width="0dp"
                android:layout_height="0dp">

                <TextView android:id="@+id/table_id"
                    android:layout_width="wrap_content"
                    android:paddingRight="@dimen/table_id_padding"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/id_title"/>

                <TextView android:id="@+id/table_song"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/song_title"/>

                <TextView android:id="@+id/table_artist"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/artist_title"/>

            </TableRow>

        </TableLayout>
</ScrollView>
