<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.derek.nowplaying.DisplayMessageActivity">

    <TextView android:id="@+id/text_song_display_single"
        android:text="@string/edit_song_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/text_artist_display_single"
        android:layout_alignEnd="@+id/text_artist_display_single" />

    <Button
        android:id="@+id/button_youtube_display_single"
        android:text="@string/youtube_button"
        android:onClick="searchYoutube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_edit_display_single"
        android:layout_alignLeft="@+id/button_edit_display_single"
        android:layout_alignStart="@+id/button_edit_display_single"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/button_edit_display_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:layout_marginBottom="40dp"
        android:onClick="edit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/text_artist_display_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_artist_hint"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/text_by_display_single"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/text_by_display_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="by"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/text_song_display_single"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_above="@+id/button_youtube_display_single"
        android:layout_centerHorizontal="true" />


</RelativeLayout>