<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.derek.nowplaying.DisplayMessageActivity">

    <EditText android:id="@+id/edit_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_artist_hint"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/by"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/edit_song"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_song_hint"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/edit_artist"
        android:layout_alignEnd="@+id/edit_artist" />

    <TextView android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="by"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/edit_song"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/save_button"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:onClick="save"/>

</RelativeLayout>
